# computer-agents

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.agent/rules/: specify-rules.md
.gemini/: GEMINI.md  styleguide.md
.gemini/skills/create-unit-tests/: SKILL.md
.gemini/workflows/: fix-typing.md
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
scripts/: tool_server.py  vnc_start.sh
specs/001-computer-use-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-computer-use-api/checklists/: requirements.md
specs/001-computer-use-api/contracts/: api.md
specs/002-computer-use-ui/: design.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-computer-use-ui/checklists/: requirements.md
src/: main.py
src/api/endpoints/: sessions.py  websockets.py
src/core/: concurrency.py  config.py  logging.py
src/database/: models.py  session.py
src/services/: anthropic_client.py  computer_use.py  docker_provisioner.py
src/ui/: Dockerfile  package-lock.json  package.json  vite.config.js
src/ui/src/: App.jsx
src/ui/src/api/: client.js
src/ui/src/components/: ChatPanel.jsx  SidebarList.jsx  VncViewer.jsx
src/ui/src/hooks/: useAgentSocket.js
src/ui/src/store/: sessionStore.js
tests/: test_hello.py  test_sessions.py
